Mon Aug  7 18:03:16 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* API addition: added OmInvalidOperationError to report invalid
	  API usage, for example, ending a session when one hasn't been
	  begun.

	* API Change: changed OmWritableDatabase considerably, so that it
	  has begin_session() and end_session() methods instead of lock()
	  and unlock() methods, amongst other things.

Fri Aug  4 18:52:56 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Split apitest_to_java into the separate packages it contained

	* Started work on the Python apitest module

Fri Aug  4 15:32:30 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* More tests work from Java.  (31 pass)

Fri Aug  4 12:38:59 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Now 25 tests pass in Java, and test_alwaysfail has been disabled.

Fri Aug  4 11:43:00 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Fixed an indexing buglet which caused results of the simplequery2 to
	  be different under Java.  Now 22 pass, 4 fail (including alwaysfail)

Thu Aug  3 17:40:38 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Now 21 tests pass, 5 fail (including alwaysfail) - databases
	  weren't being flushed properly when created.
	
	* ApiTestFuncs.main() now understands some of the normal testsuite
	  command-line options.

Thu Aug  3 14:39:58 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Java automatically converted apitest now runs 25 tests (and fails
	  14 of those).

Wed Aug  2 18:36:03 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Some more improvements to the apitest converter for Java.

Wed Aug  2 18:09:43 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added OmDatabaseCorruptError - for when a database is corrupt.

Wed Aug  2 14:29:08 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added description of OM_NEW_TRAP[_COUNT] environment variables to
	  HACKING.
