@@ -530,6 +530,7 @@ AC_OUTPUT(
  tests/stemtest.pl
  bindings/java/apitest_to_java.pl
  bindings/python/apitest_to_python.pl
+ bindings/python/apitest_helpers.py
  bindings/Makefile
  bindings/python/Makefile
  bindings/perl5/Makefile
